<resources>
    <string name="app_name">Guess the number</string>
    <string name="bPlayGameText">Play game</string>
    <string name="bShowRulesText">Show rules</string>
    <string name="bViewScoresText">View scores</string>
    <string name="etHintGuessNumberText">value</string>
    <string name="tvChooseNumberText">Choose your number:</string>
    <string name="bGuessText">Guess</string>
    <string name="tvGuessNoText">Guesses :</string>
    <string name="bTryAgainText">Try again?</string>
    <string name="bSaveUsername">Save Username</string>
    <string name="etUsernameHint">username</string>
    <string name="tvEnterUsername">Enter username:</string>
    <string name="bOptionsText">Options</string>
    <string name="tvScoreboardTitle">Top 10</string>
    <string name="toastChangeUsername">Changed username to: </string>
</resources>
