<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fkulic.guessthenumber.MainActivity"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/bPlayGame"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="0dp"
        android:text="@string/bPlayGameText"
        app:layout_constraintBottom_toTopOf="@+id/bViewScores"
        app:layout_constraintLeft_toLeftOf="@+id/bViewScores"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:background="@color/backgroundControl"
        android:textColor="@color/controlTextColor" />

    <Button
        android:id="@+id/bViewScores"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="0dp"
        android:text="@string/bViewScoresText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        android:background="@color/backgroundControl"
        android:textColor="@color/controlTextColor"
        app:layout_constraintVertical_bias="0.4"/>

    <Button
        android:id="@+id/bShowRules"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/bShowRulesText"
        app:layout_constraintLeft_toLeftOf="@+id/bViewScores"
        app:layout_constraintTop_toBottomOf="@+id/bViewScores"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:background="@color/backgroundControl"
        android:textColor="@color/controlTextColor" />

    <Button
        android:id="@+id/bOptions"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="0dp"
        android:text="@string/bOptionsText"
        android:background="@color/backgroundControl"
        android:textColor="@color/controlTextColor"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/bShowRules"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/bShowRules"/>

</android.support.constraint.ConstraintLayout>
